--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -65,12 +65,12 @@ main {
 
 #bloc-note {
     width: 100%;
-    height: 220px;
+    height: 200px;
     resize: vertical;
     border: 2px solid #e0e0e0;
     box-sizing: border-box;
     outline: none;
-    border-radius: 12px !important; /* Force l'application */
+    border-radius: 12px !important;
     padding: 8px;
     font-family: system-ui, -apple-system, sans-serif;
     font-size: 14px;
