--- a/src/CSS/popup.css
+++ b/src/CSS/popup.css
@@ -1,6 +1,11 @@
 :root {
     font-family: Arial, Helvetica, sans-serif;
 }
+#popUpName {
+    text-align: center;
+    margin-bottom: -8px ;
+    color: #0366d6;
+}
 
 body {
     display: flex;
@@ -15,7 +20,7 @@ main {
     flex-direction: column;
     flex: 1 1 auto;
     overflow: hidden;
-    padding: 8px;
+    padding: 4px;
 }
 
 .tabs {
@@ -57,21 +62,3 @@ main {
     display: none !important;
 }
 
-#bloc-note-container {
-    background: white;
-    padding: 15px;
-    border-radius: 10px;
-}
-
-#bloc-note {
-    width: 100%;
-    height: 220px;
-    resize: vertical;
-    border: 2px solid #e0e0e0;
-    box-sizing: border-box;
-    outline: none;
-    border-radius: 12px !important; /* Force l'application */
-    padding: 8px;
-    font-family: system-ui, -apple-system, sans-serif;
-    font-size: 14px;
-}
